--- a/combogen/translations/eo.json
+++ b/combogen/translations/eo.json
@@ -1,6 +1,6 @@
 {
   "title": "Gvidisto de Drogoj Kombinoj",
-  "app": "Posxtelefona Apliko",
+  "app": "Kompufona Apliko",
   "support": "Subtenu Nin",
   "drugs": {
     "lsd": "LSD",
