--- a/combogen/translations/es.json
+++ b/combogen/translations/es.json
@@ -36,6 +36,6 @@
     "caution": "Cuidado",
     "unsafe": "No seguro",
     "dangerous": "Peligroso",
-    "fallback": "Fallback"
+    "fallback": "fallback"
   }
 }
