--- a/combogen/translations/cs.json
+++ b/combogen/translations/cs.json
@@ -1,5 +1,5 @@
 {
-  "title": "Vodítko kombinací drog",
+  "title": "Přehled kombinací drog",
   "app": "Mobilní aplikace",
   "support": "Podpořte nás",
   "drugs": {
@@ -8,7 +8,7 @@
     "dmt": "DMT",
     "mescaline": "Meskalin",
     "dox": "DOx",
-    "nbomes": "NBOMes",
+    "nbomes": "NBOMe",
     "2c-x": "2C-x",
     "2c-t-x": "2C-T-x",
     "5-meo-xxt": "5-MeO-xxT",
