--- a/combogen/translations/de.json
+++ b/combogen/translations/de.json
@@ -8,7 +8,7 @@
     "dmt": "DMT",
     "mescaline": "Meskalin",
     "dox": "DOx",
-    "nbomes": "NBOMes",
+    "nbomes": "NBOMe",
     "2c-x": "2C-x",
     "2c-t-x": "2C-T-x",
     "5-meo-xxt": "5-MeO-xxT",
@@ -26,8 +26,8 @@
     "opioids": "Opioide",
     "tramadol": "Tramadol",
     "benzodiazepines": "Benzodiazepine",
-    "maois": "MAOIs",
-    "ssris": "SSRIs"
+    "maois": "MAOI",
+    "ssris": "SSRI"
   },
   "interactions": {
     "low risk & synergy": "Geringes Risiko & Synergie",
