--- a/combogen/translations/ru.json
+++ b/combogen/translations/ru.json
@@ -1,5 +1,5 @@
 {
-  "title": "Инструкция по совместимости ПАВ",
+  "title": "Совместимость ПАВ",
   "app": "Мобильное приложение",
   "support": "Поддержать нас",
   "drugs": {
