Disclaimer+Translations updated. Changed http links to https in all translations, replaced Mobile App with Android App in English, removed ambigious wordings in English and translated the word Chart within the German translations

--- a/combogen/translations/de.json
+++ b/combogen/translations/de.json
@@ -1,6 +1,6 @@
 {
   "title": "Leitfaden für die Kombination von Drogen",
-  "app": "Mobile App",
+  "app": "Android App",
   "support": "Unterstütze uns",
   "drugs": {
     "lsd": "LSD",
