--- a/combogen/translations/en.json
+++ b/combogen/translations/en.json
@@ -1,6 +1,6 @@
 {
   "title": "Guide to Drug Combinations",
-  "app": "Mobile App",
+  "app": "Android App",
   "support": "Support Us",
   "drugs": {
     "lsd": "LSD",
