--- a/combogen/translations/it.json
+++ b/combogen/translations/it.json
@@ -4,7 +4,7 @@
   "support": "Suoport Us",
   "drugs": {
     "lsd": "LSD",
-    "mushrooms": "Funghi",
+    "mushrooms": "Funghi allucinogeni",
     "dmt": "DMT",
     "mescaline": "Mescalina",
     "dox": "DOx",
