--- a/combogen/translations/en.json
+++ b/combogen/translations/en.json
@@ -25,7 +25,7 @@
     "ghb/gbl": "GHB/GBL",
     "opioids": "Opioids",
     "tramadol": "Tramadol",
-    "benzodiazepines": "Benzodiazepines",
+    "benzodiazepines": "Benzos",
     "maois": "MAOIs",
     "ssris": "SSRIs"
   },
