Implement changes discussed in PR #14

--- a/combogen/translations/cs.json
+++ b/combogen/translations/cs.json
@@ -1,6 +1,6 @@
 {
   "title": "Přehled kombinací drog",
-  "app": "Mobilní aplikace",
+  "app": "www.TripSit.Me",
   "support": "Podpořte nás",
   "drugs": {
     "lsd": "LSD",
