--- a/combogen/translations/de.json
+++ b/combogen/translations/de.json
@@ -1,6 +1,6 @@
 {
   "title": "Leitfaden für die Kombination von Drogen",
-  "app": "Android App",
+  "app": "www.TripSit.Me",
   "support": "Unterstütze uns",
   "drugs": {
     "lsd": "LSD",
