--- a/combogen/translations/es.json
+++ b/combogen/translations/es.json
@@ -1,6 +1,6 @@
 {
   "title": "Guía de mezclas de drogas",
-  "app": "Aplicación Móvil",
+  "app": "www.TripSit.Me",
   "support": "Donaciones",
   "drugs": {
     "lsd": "LSD",
