--- a/combogen/translations/fr.json
+++ b/combogen/translations/fr.json
@@ -1,6 +1,6 @@
 {
   "title": "Guide des Combinaisons de Drogues",
-  "app": "App Portable",
+  "app": "www.TripSit.Me",
   "support": "Soutenez nous",
   "drugs": {
     "lsd": "LSD",
