--- a/combogen/translations/pl.json
+++ b/combogen/translations/pl.json
@@ -1,6 +1,6 @@
 {
   "title": "Przewodnik po Kombinacjach Leków ",
-  "app": "Aplikacja na Androida",
+  "app": "www.TripSit.me",
   "support": "Wesprzyj Nas",
   "drugs": {
     "lsd": "LSD",
