--- a/combogen/translations/ru.json
+++ b/combogen/translations/ru.json
@@ -1,6 +1,6 @@
 {
   "title": "Совместимость ПАВ",
-  "app": "Мобильное приложение",
+  "app": "www.TripSit.Me",
   "support": "Поддержать нас",
   "drugs": {
     "lsd": "LSD",
